objects/A1_TrackerAPI_tokens__mdt.object
<CustomObject>
    <description>To store the access tokens returned by Tracker API auth call, along with the access keys generated within SFSC</description>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_key__c</fullName>
        <label>access key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <label>access token</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>key_expires_at__c</fullName>
        <label>key expires at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>token_expires_at__c</fullName>
        <label>token expires at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>token_expires_in__c</fullName>
        <label>token expires in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>A1 TrackerAPI tokens</label>
    <listViews>
        <fullName>AllRecords</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>access_key__c</columns>
        <columns>access_token__c</columns>
        <columns>BrandId__c</columns>
        <columns>key_expires_at__c</columns>
        <columns>token_expires_at__c</columns>
        <columns>token_expires_in__c</columns>
        <filterScope>Everything</filterScope>
        <label>AllRecords</label>
    </listViews>
    <pluralLabel>A1 TrackerAPI tokens</pluralLabel>
</CustomObject>